--- a/app.json
+++ b/app.json
@@ -9,7 +9,11 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "extra": {
-      "EXPO_PUBLIC_API_BASE": "https://instantlly-cards-backend.onrender.com"
+      "EXPO_PUBLIC_API_BASE": "https://instantlly-cards-backend.onrender.com",
+      "router": {},
+      "eas": {
+        "projectId": "3046185b-d2ab-470e-818f-b93d470d6d1a"
+      }
     },
     "splash": {
       "image": "./assets/images/splash-icon.png",
@@ -29,7 +33,8 @@
       },
       "version": "1.0.0",
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.devfarhancoder.instantllycards"
     },
     "web": {
       "bundler": "metro",
