--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.12.1",
     "expo": "~54.0.10",
+    "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.8",
     "expo-contacts": "~15.0.8",
     "expo-device": "^8.0.8",
