--- a/eas.json
+++ b/eas.json
@@ -1,5 +1,5 @@
 {
-  "cli": { "appVersionSource": "remote" },
+  "cli": { "appVersionSource": "local" },
   "build": {
     "production": {
       "android": { "buildType": "app-bundle" }
