--- a/app.json
+++ b/app.json
@@ -25,8 +25,12 @@
     },
     "android": {
       "package": "com.instantllycards.www.twa",
-      "versionCode": 5,
-      "permissions": [],
+      "versionCode": 6,
+      "permissions": [
+        "android.permission.RECEIVE_BOOT_COMPLETED",
+        "android.permission.VIBRATE",
+        "android.permission.WAKE_LOCK"
+      ],
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "icon": "./assets/images/icon.png",
@@ -42,6 +46,14 @@
     },
     "plugins": [
       "expo-router",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/notification-icon.png",
+          "color": "#0F1111",
+          "defaultChannel": "default"
+        }
+      ],
       [
         "expo-build-properties",
         {
