Added New .aab file and Admin Dashboard

--- a/app.json
+++ b/app.json
@@ -51,9 +51,7 @@
         {
           "icon": "./assets/images/notification-icon.png",
           "color": "#0F1111",
-          "defaultChannel": "default",
-          "sounds": ["notification.wav"],
-          "mode": "production"
+          "defaultChannel": "default"
         }
       ],
       [
