Fix: Register push token after login/signup
CRITICAL FIX: Push notifications were not working because:
1. registerForPushNotifications() was called on app start
2. But it required authentication FIRST
3. If user wasn't logged in yet, it silently skipped registration

Solution:
- Store pending push token in AsyncStorage if user not authenticated
- After successful login/signup, automatically register the pending token
- This ensures every logged-in user has their push token registered

Files changed:
- lib/notifications-production.ts: Store pending token, add registerPendingPushToken() function
- app/(auth)/login.tsx: Call registerPendingPushToken() after login
- app/(auth)/signup.tsx: Call registerPendingPushToken() after signup
- app/(auth)/sign-in.tsx: Call registerPendingPushToken() after sign-in

--- a/eas.json
+++ b/eas.json
@@ -2,7 +2,7 @@
   "cli": { "appVersionSource": "local" },
   "build": {
     "production": {
-      "android": { "buildType": "app-bundle" }
+      "android": { "buildType": "apk" }
     }
   },
   "submit": {
