--- a/eas.json
+++ b/eas.json
@@ -1,8 +1,19 @@
 {
   "cli": { "appVersionSource": "local" },
   "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
+    },
+    "preview": {
+      "android": {
+        "buildType": "apk"
+      }
+    },
     "production": {
-      "android": { "buildType": "apk" }
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
