--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "InstantllyCards",
     "slug": "instantllycards",
-    "version": "1.0.11",
+    "version": "1.0.12",
     "orientation": "portrait",
     "icon": "./assets/images/instantlly-logo-black.png",
     "scheme": "instantllycards",
@@ -25,7 +25,7 @@
     },
     "android": {
       "package": "com.instantllycards.www.twa",
-      "versionCode": 11,
+      "versionCode": 12,
       "permissions": [
         "android.permission.RECEIVE_BOOT_COMPLETED",
         "android.permission.VIBRATE",
@@ -51,8 +51,7 @@
         {
           "icon": "./assets/images/notification-icon.png",
           "color": "#0F1111",
-          "defaultChannel": "default",
-          "sounds": ["default"]
+          "defaultChannel": "default"
         }
       ],
       [
@@ -66,7 +65,8 @@
             "googleServicesFile": "./google-services.json"
           }
         }
-      ]
+      ],
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
