--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-firebase/app": "^23.4.0",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.12.1",
@@ -19,6 +20,7 @@
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.8",
     "expo-contacts": "~15.0.9",
+    "expo-dev-client": "~6.0.15",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.8",
     "expo-image-picker": "~17.0.8",
