--- a/app.json
+++ b/app.json
@@ -26,6 +26,7 @@
     "android": {
       "package": "com.instantllycards.www.twa",
       "versionCode": 14,
+      "googleServicesFile": "./google-services.json",
       "permissions": [
         "android.permission.RECEIVE_BOOT_COMPLETED",
         "android.permission.VIBRATE",
