--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "instantllycards",
     "version": "1.0.16",
     "orientation": "portrait",
-    "icon": "./assets/images/instantlly-logo-black.png",
+    "icon": "./assets/images/Instantlly Logo.jpg",
     "scheme": "instantllycards",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -16,9 +16,9 @@
       }
     },
     "splash": {
-      "image": "./assets/images/instantlly-logo-black.png",
+      "image": "./assets/images/Instantlly Logo.jpg",
       "resizeMode": "contain",
-      "backgroundColor": "#000000"
+      "backgroundColor": "#FFFFFF"
     },
     "ios": {
       "supportsTablet": true
@@ -34,10 +34,10 @@
       ],
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "icon": "./assets/images/instantlly-logo-black.png",
+      "icon": "./assets/images/Instantlly Logo.jpg",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/instantlly-logo-black.png",
-        "backgroundColor": "#000000"
+        "foregroundImage": "./assets/images/Instantlly Logo.jpg",
+        "backgroundColor": "#FFFFFF"
       }
     },
     "web": {
