--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
+    "ansi-escapes": "^7.1.1",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
