--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-firebase/app": "^23.4.0",
+    "@react-navigation/material-top-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.12.1",
@@ -35,11 +36,13 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-pager-view": "^6.9.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-tab-view": "^4.2.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "socket.io-client": "^4.8.1",
