--- a/package.json
+++ b/package.json
@@ -18,25 +18,25 @@
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.12.1",
-    "expo": "^54.0.13",
+    "expo": "54.0.23",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.8",
     "expo-contacts": "~15.0.9",
-    "expo-dev-client": "~6.0.15",
+    "expo-dev-client": "~6.0.17",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.8",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-notifications": "~0.32.12",
-    "expo-router": "~6.0.12",
+    "expo-router": "~6.0.14",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
-    "expo-web-browser": "~15.0.8",
+    "expo-web-browser": "~15.0.9",
     "ionicons": "^8.0.13",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-pager-view": "^6.9.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~4.1.1",
