--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EXPO_PUBLIC_API_BASE=https://instantlly-cards-backend-6ki0.onrender.com
+EXPO_PUBLIC_API_BASE=http://10.96.31.84:8080
 EXPO_PUBLIC_API_PREFIX=/api
 # Dev credentials for testing - replace with actual credentials
 EXPO_PUBLIC_DEV_EMAIL=farhangori89@gmail.com
