--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.14",
     "expo-splash-screen": "~31.0.10",
@@ -37,6 +38,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-calendars": "^1.1313.0",
     "react-native-pager-view": "^6.9.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~4.1.1",
