--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@react-navigation/material-top-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.87.4",
+    "@types/react-native-webrtc": "^1.75.9",
     "axios": "^1.12.1",
-    "expo": "^54.0.13",
+    "expo": "^54.0.25",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.8",
     "expo-contacts": "~15.0.9",
@@ -26,6 +27,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-location": "^19.0.7",
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.12",
     "expo-splash-screen": "~31.0.10",
@@ -35,6 +37,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-calendars": "^1.1313.0",
     "react-native-pager-view": "^6.9.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~4.1.1",
@@ -43,6 +46,7 @@
     "react-native-svg": "15.12.1",
     "react-native-tab-view": "^4.2.0",
     "react-native-web": "~0.21.0",
+    "react-native-webrtc": "^124.0.7",
     "react-native-worklets": "0.5.1",
     "socket.io-client": "^4.8.1",
     "zod": "^4.1.8",
