updated status tab and create advertisment page

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 EXPO_PUBLIC_API_BASE=https://instantlly-cards-backend-6ki0.onrender.com
-EXPO_PUBLIC_API_BASE_SHALINI=https://instantlly-cards-backend-1.onrender.com
+# EXPO_PUBLIC_API_BASE_SHALINI=https://instantlly-cards-backend-1.onrender.com
 EXPO_PUBLIC_API_PREFIX=/api
-# Dev credentials for testing - replace with actual credentials
-EXPO_PUBLIC_DEV_PHONE=+919876543210
 EXPO_PUBLIC_DEV_PASSWORD=Farhan_90
+EXPO_PUBLIC_API_BASE=http://192.168.0.102:8080
