Automatically Creating Default Card on creating New Account

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EXPO_PUBLIC_API_BASE=https://instantlly-cards-backend-6ki0.onrender.com
+EXPO_PUBLIC_API_BASE=http://192.168.0.222:3001
 EXPO_PUBLIC_API_PREFIX=/api
 # Dev credentials for testing - replace with actual credentials
 EXPO_PUBLIC_DEV_PHONE=+919876543210
