Apply stash@{0}: resolved conflicts and merged WIP into shalini-dev

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EXPO_PUBLIC_API_BASE=https://instantlly-cards-backend-6ki0.onrender.com
+# EXPO_PUBLIC_API_BASE=https://instantlly-cards-backend-6ki0.onrender.com
 # EXPO_PUBLIC_API_BASE_SHALINI=https://instantlly-cards-backend-1.onrender.com
 EXPO_PUBLIC_API_PREFIX=/api
 EXPO_PUBLIC_DEV_PASSWORD=Farhan_90
