--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
-# EXPO_PUBLIC_API_BASE=http://192.168.0.222:3001
-EXPO_PUBLIC_API_BASE=http://10.164.240.187:3001
+# Local development (uncomment to use local backend)
+EXPO_PUBLIC_API_BASE=http://192.168.0.222:3001
+
+# Production - AWS Cloud (Primary) with automatic Render backup
+# EXPO_PUBLIC_API_BASE=https://api.instantllycards.com
+
+# Render backup URL (automatically used if AWS Cloud fails)
+# https://instantlly-cards-backend-6ki0.onrender.com
 EXPO_PUBLIC_API_PREFIX=/api
 # Dev credentials for testing - replace with actual credentials
 EXPO_PUBLIC_DEV_PHONE=+919876543210
