--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/auth": "^21.14.0",
     "@react-navigation/material-top-tabs": "^7.4.2",
@@ -32,6 +32,7 @@
     "expo-location": "~19.0.7",
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.14",
+    "expo-sms-retriever": "^0.1.1",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
@@ -46,6 +47,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-sms-retriever": "^1.1.1",
     "react-native-svg": "15.12.1",
     "react-native-tab-view": "^4.2.0",
     "react-native-web": "~0.21.0",
