--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,24 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true,
-    "jsx": "react-native",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
+    "strict": false,
+    "allowJs": true,
+    "jsx": "react-jsx",
+    "skipLibCheck": true
   },
   "include": [
+    "app",
+    "src",
     "**/*.ts",
     "**/*.tsx",
-    ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "lib/**/*"
+    ".expo/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/node_modules/*",
+    "metro.config.js",
+    "babel.config.js",
+    "jest.config.js"
   ]
 }
