--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.12.1",
     "expo": "^54.0.13",
+    "expo-application": "^7.0.8",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.8",
     "expo-contacts": "~15.0.9",
@@ -24,6 +25,7 @@
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.8",
     "expo-image-picker": "~17.0.8",
+    "expo-intent-launcher": "~13.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-notifications": "~0.32.12",
