fix the bug of permission page if user already allow permission user should navigate to home or auth page

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Local development (uncomment to use local backend)
-EXPO_PUBLIC_API_BASE=http://10.231.28.187:3001
+# EXPO_PUBLIC_API_BASE=http://10.231.28.187:3001
 
 # Production - AWS Cloud (Primary) with automatic Render backup
-# EXPO_PUBLIC_API_BASE=https://api.instantllycards.com
+EXPO_PUBLIC_API_BASE=https://api.instantllycards.com
 
 # Render backup URL (automatically used if AWS Cloud fails)
 # https://instantlly-cards-backend-6ki0.onrender.com
