--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
     "ansi-escapes": "^7.1.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
