--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
     "strict": false,
     "allowJs": true,
     "jsx": "react-jsx",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": [
     "app",
