--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "instantllycards",
   "main": "expo-router/entry",
-  "version": "1.0.40",
+  "version": "1.0.41",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
@@ -57,7 +58,8 @@
     "react-native-worklets": "0.5.1",
     "socket.io-client": "^4.8.1",
     "zod": "^4.1.8",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "patch-package": "^8.0.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
