--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-# Local development (uncomment to use local backend)
-# EXPO_PUBLIC_API_BASE=http://10.231.28.187:3001
+# Local development - Testing latest commits locally
+# EXPO_PUBLIC_API_BASE=http://192.168.0.104:8080
 
-# Production - AWS Cloud (Primary) with automatic Render backup
-EXPO_PUBLIC_API_BASE=https://api.instantllycards.com
+# Production - AWS Cloud (video ads deployed here)
+# EXPO_PUBLIC_API_BASE=https://api.instantllycards.com
 
-# Render backup URL (automatically used if AWS Cloud fails)
-# https://instantlly-cards-backend-6ki0.onrender.com
+# Render backup URL (ACTIVE FOR PRODUCTION APK)
+EXPO_PUBLIC_API_BASE=https://instantlly-cards-backend-6ki0.onrender.com
 
 # Alternative backend (for testing)
 # EXPO_PUBLIC_API_BASE=http://192.168.0.105:8080
 
-EXPO_PUBLIC_API_BASE_SHALINI=https://instantlly-cards-backend-1.onrender.com
+# EXPO_PUBLIC_API_BASE=https://instantlly-cards-backend-1.onrender.com
 
 EXPO_PUBLIC_API_PREFIX=/api
