--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.12.1",
     "expo": "^54.0.23",
     "expo-application": "^7.0.8",
+    "expo-av": "^16.0.8",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.8",
     "expo-contacts": "~15.0.9",
@@ -35,11 +36,11 @@
     "expo-location": "~19.0.7",
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.14",
-    "expo-sms-retriever": "^0.1.1",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
     "ionicons": "^8.0.13",
+    "patch-package": "^8.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -58,8 +59,7 @@
     "react-native-worklets": "0.5.1",
     "socket.io-client": "^4.8.1",
     "zod": "^4.1.8",
-    "zustand": "^5.0.8",
-    "patch-package": "^8.0.1"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
