--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # Local development - Testing latest commits locally
 # EXPO_PUBLIC_API_BASE=http://192.168.0.108:8080
 
-# Production - AWS Cloud (video ads deployed here)
-EXPO_PUBLIC_API_BASE=https://api-test.instantllycards.com
+# Production - AWS Cloud (LIVE PRODUCTION URL)
+EXPO_PUBLIC_API_BASE=https://api.instantllycards.com
 
-# Render backup URL (ACTIVE FOR PRODUCTION APK)
+# Render backup URL
  #EXPO_PUBLIC_API_BASE=https://instantlly-cards-backend-6ki0.onrender.com
 
 # Alternative backend (for testing)
