--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Instantlly Cards",
     "slug": "instantllycards",
-    "version": "1.0.42",
+    "version": "1.0.55",
     "orientation": "portrait",
     "icon": "./assets/logo.png",
     "scheme": "instantllycards",
@@ -30,7 +30,7 @@
     },
     "android": {
       "package": "com.instantllycards.www.twa",
-      "versionCode": 41,
+      "versionCode": 55,
       "permissions": [
         "android.permission.RECEIVE_BOOT_COMPLETED",
         "android.permission.VIBRATE",
@@ -43,29 +43,7 @@
         "foregroundImage": "./assets/logo.png",
         "backgroundColor": "#FFFFFF",
         "monochromeImage": "./assets/logo.png"
-      },
-      "intentFilters": [
-        {
-          "action": "VIEW",
-          "autoVerify": true,
-          "data": [
-            {
-              "scheme": "https",
-              "host": "instantllycards.com",
-              "pathPrefix": "/signup"
-            },
-            {
-              "scheme": "http",
-              "host": "instantllycards.com",
-              "pathPrefix": "/signup"
-            }
-          ],
-          "category": [
-            "BROWSABLE",
-            "DEFAULT"
-          ]
-        }
-      ]
+      }
     },
     "web": {
       "bundler": "metro",
@@ -96,8 +74,7 @@
           }
         }
       ],
-      "expo-web-browser",
-      "expo-asset"
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
