--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "instantllycards",
   "main": "expo-router/entry",
-  "version": "1.0.55",
+  "version": "1.0.56",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -40,6 +40,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
     "ionicons": "^8.0.13",
+    "patch-package": "^8.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -50,6 +51,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-share": "^12.2.1",
     "react-native-sms-retriever": "^1.1.1",
     "react-native-svg": "15.12.1",
     "react-native-tab-view": "^4.2.0",
@@ -58,8 +60,7 @@
     "react-native-worklets": "0.5.1",
     "socket.io-client": "^4.8.1",
     "zod": "^4.1.8",
-    "zustand": "^5.0.8",
-    "patch-package": "^8.0.1"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
