--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@babel/helper-define-polyfill-provider": "^0.6.5",
     "@expo/metro-runtime": "~6.1.2",
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-firebase/app": "^21.14.0",
@@ -22,6 +23,7 @@
     "axios": "^1.12.1",
     "expo": "^54.0.23",
     "expo-application": "^7.0.8",
+    "expo-asset": "~12.0.12",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.8",
     "expo-contacts": "~15.0.9",
