--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "instantllycards",
   "main": "expo-router/entry",
-  "version": "1.0.55",
+  "version": "1.0.57",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -29,14 +29,17 @@
     "expo-contacts": "~15.0.9",
     "expo-dev-client": "~6.0.17",
     "expo-device": "~8.0.9",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.8",
     "expo-image-picker": "~17.0.8",
     "expo-intent-launcher": "~13.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
+    "expo-media-library": "~18.2.1",
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.14",
+    "expo-sharing": "~14.0.8",
     "expo-sms-retriever": "^0.1.1",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
