--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo": "^54.0.23",
     "expo-application": "^7.0.8",
     "expo-asset": "~12.0.12",
-    "expo-av": "^16.0.8",
+    "expo-av": "~16.0.8",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.8",
     "expo-contacts": "~15.0.9",
@@ -42,6 +42,7 @@
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-video-thumbnails": "~10.0.8",
     "expo-web-browser": "~15.0.9",
     "ionicons": "^8.0.13",
     "patch-package": "^8.0.1",
