--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # EXPO_PUBLIC_API_BASE=http://192.168.0.108:8080
 
 # Production - AWS Cloud (video ads deployed here)
-EXPO_PUBLIC_API_BASE=https://api.instantllycards.com
+EXPO_PUBLIC_API_BASE=https://api-test.instantllycards.com
 
 # Render backup URL (ACTIVE FOR PRODUCTION APK)
  #EXPO_PUBLIC_API_BASE=https://instantlly-cards-backend-6ki0.onrender.com
