--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@babel/helper-define-polyfill-provider": "^0.6.5",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/auth": "^21.14.0",
@@ -61,6 +61,7 @@
     "react-native-sms-retriever": "^1.1.1",
     "react-native-svg": "15.12.1",
     "react-native-tab-view": "^4.2.0",
+    "react-native-version-check": "^3.5.0",
     "react-native-view-shot": "4.0.3",
     "react-native-web": "~0.21.0",
     "react-native-webview": "13.15.0",
