--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "instantllycards",
   "main": "expo-router/entry",
-  "version": "1.0.64",
+  "version": "1.0.65",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -50,6 +50,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
+    "react-native-google-play-install-referrer": "^1.0.0",
     "react-native-pager-view": "^6.9.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-qrcode-svg": "^6.3.15",
