--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "instantllycards",
   "main": "expo-router/entry",
-  "version": "1.0.65",
+  "version": "1.0.68",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -38,7 +38,6 @@
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
     "expo-media-library": "~18.2.1",
-    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.14",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -75,6 +74,8 @@
     "@types/react-native": "^0.72.8",
     "ansi-escapes": "^7.1.1",
     "babel-plugin-module-resolver": "^5.0.2",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "expo-module-scripts": "^5.0.8",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
