--- a/eas.json
+++ b/eas.json
@@ -1,19 +1,30 @@
 {
-  "cli": { "appVersionSource": "local" },
+  "cli": {
+    "appVersionSource": "local"
+  },
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "cache": {
+        "disabled": false
+      }
     },
     "preview": {
       "android": {
         "buildType": "apk"
+      },
+      "cache": {
+        "disabled": false
       }
     },
     "production": {
       "android": {
         "buildType": "app-bundle",
         "credentialsSource": "local"
+      },
+      "cache": {
+        "disabled": false
       }
     }
   },
