--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "instantllycards",
   "main": "expo-router/entry",
+  "overrides": {
+    "react-native-safe-area-context": "5.6.2"
+  },
   "version": "1.0.68",
   "scripts": {
     "start": "expo start",
@@ -17,6 +20,7 @@
     "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/auth": "^21.14.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/material-top-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.87.4",
@@ -54,7 +58,7 @@
     "react-native-picker-select": "^9.3.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-safe-area-context": "5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-share": "^12.2.2",
     "react-native-sms-retriever": "^1.1.1",
@@ -71,7 +75,6 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "@types/react-native": "^0.72.8",
     "ansi-escapes": "^7.1.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
