Fix dependencies: Update to reanimated 4.x, add worklets, regenerate android with prebuild

--- a/.easignore
+++ b/.easignore
@@ -1,31 +1,25 @@
-# .easignore - Files to exclude from EAS builds
-
+﻿# .easignore - Files to exclude from EAS builds
 # (This overrides .gitignore for EAS Build uploads)
 
 # Allow google-services.json to be uploaded to EAS
-
 # even though it's in .gitignore
-
 !google-services.json
 
 # Exclude large files and folders to reduce build size
-
-_.md
-_.log
-_.aab
-_.apk
+*.md
+*.log
+*.aab
+*.apk
 .git/
 .vscode/
 node_modules/.cache/
 **tests**/
-_.test.ts
-_.test.tsx
-_.spec.ts
-_.spec.tsx
+*.test.ts
+*.test.tsx
+*.spec.ts
+*.spec.tsx
 
-# Force EAS to regenerate android folder with expo prebuild
+# Use CNG / Prebuild - exclude android folder so EAS regenerates it
+android/
 
-# This ensures native code is fresh and doesn't include expo-notifications
-
-/android
-/ios
+# Use local android folder (already has expo-notifications removed)
