--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "web": "expo start --web",
     "postinstall": "patch-package"
   },
+  "overrides": {
+    "react-native-safe-area-context": "~5.6.0"
+  },
   "dependencies": {
     "@babel/helper-define-polyfill-provider": "^0.6.5",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/auth": "^21.14.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/material-top-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.87.4",
@@ -71,13 +75,22 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "@types/react-native": "^0.72.8",
     "ansi-escapes": "^7.1.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "expo-module-scripts": "^5.0.8",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-google-play-install-referrer",
+          "react-native-sms-retriever"
+        ]
+      }
+    }
   },
   "private": true,
   "description": "",
