--- a/.easignore
+++ b/.easignore
@@ -1,25 +1,30 @@
 ﻿# .easignore - Files to exclude from EAS builds
+
 # (This overrides .gitignore for EAS Build uploads)
 
 # Allow google-services.json to be uploaded to EAS
+
 # even though it's in .gitignore
+
 !google-services.json
 
 # Exclude large files and folders to reduce build size
-*.md
-*.log
-*.aab
-*.apk
+
+_.md
+_.log
+_.aab
+_.apk
 .git/
 .vscode/
 node_modules/.cache/
 **tests**/
-*.test.ts
-*.test.tsx
-*.spec.ts
-*.spec.tsx
+_.test.ts
+_.test.tsx
+_.spec.ts
+_.spec.tsx
 
 # Use CNG / Prebuild - exclude android folder so EAS regenerates it
+
 android/
 
 # Use local android folder (already has expo-notifications removed)
