Working Adswithoutchannel With designrequest

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-# Local development (uncomment to use local backend)
-# EXPO_PUBLIC_API_BASE=http://10.229.134.187:8080
+# Local development (TESTING - USE YOUR LOCAL IP)
+EXPO_PUBLIC_API_BASE=http://192.168.0.119:8080
 
 # Production - AWS Cloud (video ads deployed here)
-EXPO_PUBLIC_API_BASE=https://api-test.instantllycards.com
+# EXPO_PUBLIC_API_BASE=https://api-test.instantllycards.com
 
 
 # Test Server
