--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-application": "^7.0.8",
     "expo-asset": "~12.0.12",
     "expo-av": "~16.0.8",
+    "expo-blur": "^15.0.8",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.8",
     "expo-contacts": "~15.0.9",
