--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-# Test Server
+# Test/Staging Server
 EXPO_PUBLIC_API_BASE=https://api-test.instantllycards.com
 
 # Alternative backend (for testing)
-EXPO_PUBLIC_API_BASE=http://192.168.0.199:3001
+# EXPO_PUBLIC_API_BASE=http://192.168.0.199:3001
 EXPO_PUBLIC_API_PREFIX=/api
